methods.basics.MethodsDogHouse.scala.error
Compilation error:
MethodsDogHouse:7: error: type mismatch;
 found   : Unit
 required: Boolean
  if(x=7){
      ^